--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "massive": "^5.11.2",
+    "mtgsdk": "^0.4.3",
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
