--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "grommet-icons": "^4.3.0",
     "massive": "^5.11.2",
     "mtgsdk": "^0.4.3",
     "nodemon": "^1.19.1",
