--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "grommet-icons": "^4.3.0",
     "massive": "^5.11.2",
     "mtgsdk": "^0.4.3",
+    "nodemailer": "^6.3.0",
+    "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
